--- a/src/components/BtnCheck.css
+++ b/src/components/BtnCheck.css
@@ -8,7 +8,8 @@
 
 .btn-check {
   border-radius: 5px;
-  width: 200px;
+  width: 100%;
+
   /* padding: 10px 20px;
   border: none;
   cursor: pointer;
